[package]

name = "quaternion"
version = "0.2.1"
authors = [
    "bvssvni <bvssvni@gmail.com>",
    "Steve Jahns <s.t.jahns@gmail.com>"
]
keywords = ["quaternion", "math", "piston"]
description = "A simple and type agnostic quaternion math library designed for reexporting"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/PistonDevelopers/quaternion.git"
homepage = "https://github.com/PistonDevelopers/quaternion"

[lib]

name = "quaternion"
path = "src/lib.rs"

[dependencies]
vecmath = "0.2.0"
